--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,12 +10,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
 #        show_sql: true 쿼리를 다 남기기때문에 로그파일에 남기는게 좋다
         format_sql: true
         default_batch_fetch_size: 100 #최적화 옵션 , where in 쿼리의 개수를 뜻함
+        #dialect: 맞는 db로 쿼리문 날림
 
 logging.level:
   org.hibernate.SQL: debug
