--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
         default_batch_fetch_size: 100 #최적화 옵션 , where in 쿼리의 개수를 뜻함
         #dialect: 맞는 db로 쿼리문 날림
 
+  data:
+    web:
+      pageable:
+        default-page-size: 10 #페이징 글로벌 설정
+        max-page-size: 2000
+
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace //파라미터 바인딩하는것까지 보여줌
